# rust-graph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: apply-pip-compile.yml  apply-ruff.yml  check-pip-compile.yml  deploy.yml  gen-init-py.yml  lint.yml  styles-only-changed.yml  styles.yml  tests.yml
docs/: CHANGELOG.md
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: test_dijkstra.rs
scripts/: get_python_version.py  hf_download.py  install.sh  update_version_in_cargo_toml.py
src/rust_graph/: __init__.py  rust_graph.pyi
tests/: test_dijkstra.py
tools/: benchmark.py
